--- a/.github/workflows/main_booknet.yml
+++ b/.github/workflows/main_booknet.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP app to Azure Web App - BookNeT
 
 on:
@@ -14,20 +11,34 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      # שלב 1: Checkout את הקוד שלך
       - uses: actions/checkout@v4
 
+      # שלב 2: Setup MSBuild path
       - name: Setup MSBuild path
         uses: microsoft/setup-msbuild@v1.0.2
 
+      # שלב 3: Setup NuGet
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v1.0.5
 
+      # שלב 4: Restore NuGet packages (נכון אם יש לך קובץ packages.config, אחרת נוכל להחליף ב-docker restore)
       - name: Restore NuGet packages
         run: nuget restore
 
-      - name: Publish to folder
-        run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
+      # שלב 5: אם מדובר בפרויקט .NET, יש להוסיף את dotnet restore כדי לשחזר תלויות
+      - name: Restore dependencies
+        run: dotnet restore ./BookNeT.sln  # אם יש לך קובץ Solution בשם BookNeT.sln
 
+      # שלב 6: Build את הפרויקט
+      - name: Build the project
+        run: dotnet build ./BookNeT.sln --configuration Release
+
+      # שלב 7: Publish את הפרויקט לקובץ פיזי
+      - name: Publish to folder
+        run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\" 
+
+      # שלב 8: Upload artifact
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
@@ -42,11 +53,13 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
+      # שלב 1: Download artifact מהשלב הקודם
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: ASP-app
 
+      # שלב 2: Deploy ל-Azure Web App
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
